# SilicaEngine

./: .gitignore  CMakeLists.txt  README.md  tatus
.github/workflows/: release.yml
Fractura/: CMakeLists.txt  README.md
Fractura/assets/shaders/: fragment.glsl  vertex.glsl
Fractura/src/: main.cpp
SilicaEngine/: CHANGELOG.md  CMakeLists.txt  FEATURES.md  ROADMAP.md
SilicaEngine/include/SilicaEngine/: SilicaEngine.h
SilicaEngine/include/SilicaEngine/Core/: Application.h  AssetDependency.h  AssetManager.h  Camera.h  ErrorCodes.h  Input.h  Logger.h  ResourceHandle.h  ResourceTracker.h  Result.h  Screenshot.h  Window.h
SilicaEngine/include/SilicaEngine/Debug/: DebugRenderer.h  Profiler.h
SilicaEngine/include/SilicaEngine/Renderer/: BatchRenderer.h  Renderer.h  Shader.h  Texture.h
SilicaEngine/src/Core/: Application.cpp  AssetDependency.cpp  AssetManager.cpp  Camera.cpp  ErrorCodes.cpp  Input.cpp  Logger.cpp  ResourceHandle.cpp  ResourceTracker.cpp  Screenshot.cpp  Window.cpp
SilicaEngine/src/Debug/: DebugRenderer.cpp  Profiler.cpp
SilicaEngine/src/Renderer/: BatchRenderer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  stb_image_impl.cpp  stb_impl.cpp
docs/: README.md  SUMMARY.md
docs/SilicaEngine/Core/: Application.md  Camera.md  ErrorHandling.md  Input.md  Logger.md  README.md  ResourceManagement.md  Screenshot.md  Window.md
docs/SilicaEngine/Renderer/: README.md  Renderer.md
review/: README.md  SilicaEngine_Codebase_Analysis.md  SilicaEngine_Optimization_Analysis.md  SilicaEngine_v1.1.0_Review.md
scripts/: README.md
scripts/common/: analyze.py  format.py
scripts/linux/: build-debug.sh  build-release.sh  build.sh  clean.sh  install.sh  run-fractura.sh  setup-deps.sh
scripts/macos/: build-debug.sh  build-release.sh  build.sh  clean.sh  install.sh  run-fractura.sh  setup-deps.sh
scripts/windows/: build-debug.bat  build-release.bat  build.bat  clean.bat  install.bat  run-fractura.bat  setup-deps.bat
